--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>Saulo Moreno</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="Css/styles.css">
   <link rel="icon" href="img\favicon\favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
