--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="img/profile-img2-modified.png" alt="profile-pic">
+      <img src="img/Profile-img2-modified.png" alt="profile-pic">
       <h2>Hello.</h2>
       <p class="intro">Ì am a 19 years old boy trying to become a Web Developer. Founder of Characters Dmg Theory for Genshin Impact.</p>
     </div>
@@ -33,7 +33,7 @@
         <p>I have been playing games since childhood and never stopped since. Because of that, I have gained passion and a wealth experience with computer.</p>
       </div>
       <div class="skill-row">
-        <img class="yaemiko-img" src="img/yaemikojpg.jpg" alt="kokomi-pic">
+        <img class="yaemiko-img" src="img/YaeMikojpg.jpg" alt="YaeMiko-pic">
         <h3>Dmg Theory</h3>
         <p>I have been into gacha games for the past 2 years and one I have been playing a lot is Genshin Impact. I do <a href="https://docs.google.com/spreadsheets/d/1WFnHq70GCWpPmjmvbrLtkBa39GwDSDvLJB8zMGIZOkE/edit#gid=113865810">Dmg theory</a> for pre-realease and released characters.</p>
       </div>
