--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h2>Get In Touch</h2>
       <h3>If you love games as much as I do.</h3>
       <p class=contact-message>Love games as much as I do? Let's play together sometime. We can do dmg theory or code!</p>
-      <a class="btn" href="https://discord.com/channels/@me/784695754907451463">CONTACT ME</a>
+      <a class="btn" href="mailto:sasa.moreno5@email.com">CONTACT ME</a>
     </div>
   </div>
 
